# VideoOverUART

./: .gitignore  README.md
SOG128128A_Firmware/: README.md  SOG128128A_Firmware.ino
VideoSenderDotNET/: MainForm.Designer.cs  MainForm.cs  MainForm.resx  Program.cs  VideoTest.csproj  VideoTest.sln  packages.config
VideoSenderDotNET/FastSerial/: FastSerial.vcxproj  FastSerial.vcxproj.filters  SerialPort.h  dllmain.cpp
VideoSenderDotNET/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
rp2040_Firmware/: CMakeLists.txt  README.md  build.sh  docker_build.sh  docker_run.sh  main.c  ssd1306.c  ssd1306.h
